--- a/index.html
+++ b/index.html
@@ -65,13 +65,63 @@
 		<div class="categories">
 			<h4>Categories</h4>
 			<ul>
-				<li><a href="#">fashion <span>(6)</span></a></li>
+				<li><a href="#">Fashion <span>(6)</span></a></li>
 				<li><a href="#">Technology <span>(8)</span></a></li>
 				<li><a href="#">Travel <span>(2)</span></a></li>
 				<li><a href="#">Food <span>(2)</span></a></li>
 				<li><a href="#">Photography <span>(7)</span></a></li>
 			</ul>
 		</div>
+		<div class="aside_articles">
+			<h4>Popular Articles</h4>
+			<div class="article_block">
+				<img src="images/image_1.jpg">
+				<h3>Even the all-powerful Pointing has no control</h3>
+				<span><i class="fa-solid fa-calendar-days"></i>June 28, 2019</span>  
+				<span><i class="fa-solid fa-user"></i>Dave Lewis</span>  
+				<span><i class="fa-solid fa-message"></i>19</span>
+			</div>
+		</div>
+		<div class="aside_articles">
+			<div class="article_block">
+				<img src="images/image_2.jpg">
+				<h3>Even the all-powerful Pointing has no control</h3>
+				<span><i class="fa-solid fa-calendar-days"></i>June 28, 2019</span>  
+				<span><i class="fa-solid fa-user"></i>Dave Lewis</span>  
+				<span><i class="fa-solid fa-message"></i>19</span>
+			</div>
+		</div>
+		<div class="aside_articles">
+			<div class="article_block">
+				<img src="images/image_3.jpg">
+				<h3>Even the all-powerful Pointing has no control</h3>
+				<span><i class="fa-solid fa-calendar-days"></i>June 28, 2019</span>  
+				<span><i class="fa-solid fa-user"></i>Dave Lewis</span>  
+				<span><i class="fa-solid fa-message"></i>19</span>
+			</div>
+		</div>	
+		<div class="tag_block">
+			<h4>Tag Cloud</h4>
+			<button type="button">ANIMALS</button>
+			<button type="button">HUMAN</button>
+			<button type="button">PEOPLE</button>
+			<button type="button">CAT</button>
+			<button type="button">DOG</button>
+			<button type="button">NATURE</button>
+			<button type="button">LEAVES</button>
+			<button type="button">FOOD</button>
+		</div>
+		<div class="newsletter">
+			<div class="filter">				
+			</div>
+			<div class="news_text">
+				<h4>Newsletter</h4>
+				<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+				<input type="text" placeholder="Email Address">
+				<button>Subscribe</button>
+			</div>
+				
+		</div>			
 	</aside>
 
 
