--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
 	</main>
 
 	<aside>
-		<input type="text" placeholder="Type a keyword and hit enter">
-		<i class="fa-solid fa-magnifying-glass"></i>
+		<div class="search_bar">
+			<input type="text" placeholder="Type a keyword and hit enter">
+			<i class="fa-solid fa-magnifying-glass"></i>
+		</div>
+		
 
 		<div class="categories">
 			<h4>Categories</h4>
