--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</ul>
 		<div class="sub_block">
 			<div class="logo">
-				Andrea Moore
+				<a href="#">Andrea Moore</a>
 			</div>
 			<div class="sub_block_form">
 				<h4>Subscribe for newsletter</h4>
@@ -79,7 +79,7 @@
 			<h4>Popular Articles</h4>
 			<div class="article_block">
 				<img src="images/image_1.jpg">
-				<h3>Even the all-powerful Pointing has no control</h3>
+				<a href="#">Even the all-powerful Pointing has no control</a>
 				<span><i class="fa-solid fa-calendar-days"></i>June 28, 2019</span>  
 				<span><i class="fa-solid fa-user"></i>Dave Lewis</span>  
 				<span><i class="fa-solid fa-message"></i>19</span>
@@ -88,7 +88,7 @@
 		<div class="aside_articles">
 			<div class="article_block">
 				<img src="images/image_2.jpg">
-				<h3>Even the all-powerful Pointing has no control</h3>
+				<a href="#">Even the all-powerful Pointing has no control</a>
 				<span><i class="fa-solid fa-calendar-days"></i>June 28, 2019</span>  
 				<span><i class="fa-solid fa-user"></i>Dave Lewis</span>  
 				<span><i class="fa-solid fa-message"></i>19</span>
@@ -97,7 +97,7 @@
 		<div class="aside_articles">
 			<div class="article_block">
 				<img src="images/image_3.jpg">
-				<h3>Even the all-powerful Pointing has no control</h3>
+				<a href="#">Even the all-powerful Pointing has no control</a>
 				<span><i class="fa-solid fa-calendar-days"></i>June 28, 2019</span>  
 				<span><i class="fa-solid fa-user"></i>Dave Lewis</span>  
 				<span><i class="fa-solid fa-message"></i>19</span>
@@ -105,14 +105,14 @@
 		</div>	
 		<div class="tag_block">
 			<h4>Tag Cloud</h4>
-			<button type="button">ANIMALS</button>
-			<button type="button">HUMAN</button>
-			<button type="button">PEOPLE</button>
-			<button type="button">CAT</button>
-			<button type="button">DOG</button>
-			<button type="button">NATURE</button>
-			<button type="button">LEAVES</button>
-			<button type="button">FOOD</button>
+			<a href="#">ANIMALS</a>
+			<a href="#">HUMAN</a>
+			<a href="#">PEOPLE</a>
+			<a href="#">CAT</a>
+			<a href="#">DOG</a>
+			<a href="#">NATURE</a>
+			<a href="#">LEAVES</a>
+			<a href="#">FOOD</a>
 		</div>
 		<div class="newsletter">
 			<div class="filter">				
@@ -123,8 +123,22 @@
 				<input type="text" placeholder="Email Address">
 				<button>Subscribe</button>
 			</div>
-				
-		</div>			
+		</div>	
+		<div class="archives_block categories">
+			<h4>Archives</h4>
+			<ul>
+				<li><a href="#">Decob14 2018<span>(10)</span></a></li>
+				<li><a href="#">September 2018<span>(6)</span></a></li>
+				<li><a href="#">August 2018<span>(8)</span></a></li>
+				<li><a href="#">July 2018<span>(1)</span></a></li>
+				<li><a href="#">June 2018<span>(7)</span></a></li>
+				<li><a href="#">May 2018<span>(5)</span></a></li>
+			</ul>
+		</div>	
+		<div class="paragraph_block">
+			<h4>Paragraph</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut.</p>
+		</div>
 	</aside>
 
 
