--- a/index.html
+++ b/index.html
@@ -33,19 +33,163 @@
 	<main>
 		<div class="post_block">
 			<img src="images/image_1.jpg" alt="">
-			<h2>A Loving Heart is the Truest Wisdom</h2>
-			<div class="post_block_text">	
-				<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-				<span><i class="fa-regular fa-folder"></i>Travel</span>
-				<p><i class="fa-solid fa-message"></i>5 Comment</p>
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
 			</div>
-			<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-			<a href="#">Read More <i class="fa-solid fa-angle-right"></i></a>
+			
 			
 		</div>
 			
-
-
+		<div class="post_block">
+			<img src="images/image_2.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
+		<div class="post_block">
+			<img src="images/image_3.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
+		<div class="post_block">
+			<img src="images/image_4.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
+		<div class="post_block">
+			<img src="images/image_5.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
+		<div class="post_block">
+			<img src="images/image_6.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
+		<div class="post_block">
+			<img src="images/image_7.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
+		<div class="post_block">
+			<img src="images/image_8.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
+		<div class="post_block">
+			<img src="images/image_9.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
+		<div class="post_block">
+			<img src="images/image_10.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
+		<div class="post_block">
+			<img src="images/image_11.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
+		<div class="post_block">
+			<img src="images/image_12.jpg" alt="">
+			<div class="text_block">
+				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<div class="post_block_text">	
+					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
+					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<p><i class="fa-solid fa-message"></i>5 Comment</p>
+				</div>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>		
+		</div>
 		<div class="page_button">
 			<a href="#"><</a>
 			<a href="#" class="active_btn">1</a>
