--- a/fashion.html
+++ b/fashion.html
@@ -4,15 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/all.min.css">
+	<link rel="stylesheet" href="css/all.min.css">	
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/fashion.css">
 	<title>Document</title>
 </head>
 <body>
 	<nav>
 		<ul>
-			<li><a href="index.html" class="active">Home</a></li>
-			<li><a href="fashion.html">Fashion</a></li>
+			<li><a href="index.html" >Home</a></li>
+			<li><a href="fashion.html" class="active">Fashion</a></li>
 			<li><a href="#">Travel</a></li>
 			<li><a href="#">About</a></li>
 			<li><a href="#">Contact</a></li>
@@ -28,7 +29,6 @@
 				
 			<p>Copyright ©2023 All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by <span>Colorlib</span></p>
 		</div>
-		
 	</nav>
 	<main>
 		<div class="post_block">
@@ -201,90 +201,6 @@
 			
 		</div>
 	</main>
-
-	<aside>
-		<div class="search_bar">
-			<input type="text" placeholder="Type a keyword and hit enter">
-			<i class="fa-solid fa-magnifying-glass"></i>
-		</div>
-		
-
-		<div class="categories">
-			<h4>Categories</h4>
-			<ul>
-				<li><a href="#">Fashion <span>(6)</span></a></li>
-				<li><a href="#">Technology <span>(8)</span></a></li>
-				<li><a href="#">Travel <span>(2)</span></a></li>
-				<li><a href="#">Food <span>(2)</span></a></li>
-				<li><a href="#">Photography <span>(7)</span></a></li>
-			</ul>
-		</div>
-		<div class="aside_articles">
-			<h4>Popular Articles</h4>
-			<div class="article_block">
-				<img src="images/image_1.jpg">
-				<a href="#">Even the all-powerful Pointing has no control</a>
-				<span><i class="fa-solid fa-calendar-days"></i>June 28, 2019</span>  
-				<span><i class="fa-solid fa-user"></i>Dave Lewis</span>  
-				<span><i class="fa-solid fa-message"></i>19</span>
-			</div>
-		</div>
-		<div class="aside_articles">
-			<div class="article_block">
-				<img src="images/image_2.jpg">
-				<a href="#">Even the all-powerful Pointing has no control</a>
-				<span><i class="fa-solid fa-calendar-days"></i>June 28, 2019</span>  
-				<span><i class="fa-solid fa-user"></i>Dave Lewis</span>  
-				<span><i class="fa-solid fa-message"></i>19</span>
-			</div>
-		</div>
-		<div class="aside_articles">
-			<div class="article_block">
-				<img src="images/image_3.jpg">
-				<a href="#">Even the all-powerful Pointing has no control</a>
-				<span><i class="fa-solid fa-calendar-days"></i>June 28, 2019</span>  
-				<span><i class="fa-solid fa-user"></i>Dave Lewis</span>  
-				<span><i class="fa-solid fa-message"></i>19</span>
-			</div>
-		</div>	
-		<div class="tag_block">
-			<h4>Tag Cloud</h4>
-			<a href="#">ANIMALS</a>
-			<a href="#">HUMAN</a>
-			<a href="#">PEOPLE</a>
-			<a href="#">CAT</a>
-			<a href="#">DOG</a>
-			<a href="#">NATURE</a>
-			<a href="#">LEAVES</a>
-			<a href="#">FOOD</a>
-		</div>
-		<div class="newsletter">
-			<div class="filter">				
-			</div>
-			<div class="news_text">
-				<h4>Newsletter</h4>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
-				<input type="text" placeholder="Email Address">
-				<button>Subscribe</button>
-			</div>
-		</div>	
-		<div class="archives_block categories">
-			<h4>Archives</h4>
-			<ul>
-				<li><a href="#">Decob14 2018<span>(10)</span></a></li>
-				<li><a href="#">September 2018<span>(6)</span></a></li>
-				<li><a href="#">August 2018<span>(8)</span></a></li>
-				<li><a href="#">July 2018<span>(1)</span></a></li>
-				<li><a href="#">June 2018<span>(7)</span></a></li>
-				<li><a href="#">May 2018<span>(5)</span></a></li>
-			</ul>
-		</div>	
-		<div class="paragraph_block">
-			<h4>Paragraph</h4>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut.</p>
-		</div>
-	</aside>
-
 
 </body>
 </html>
