--- a/fashion.html
+++ b/fashion.html
@@ -14,13 +14,13 @@
 		<ul>
 			<li><a href="index.html" >Home</a></li>
 			<li><a href="fashion.html" class="active">Fashion</a></li>
-			<li><a href="#">Travel</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="travel.html">Travel</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		<div class="sub_block">
 			<div class="logo">
-				<a href="#">Andrea Moore</a>
+				<a href="index.html">Andrea Moore</a>
 			</div>
 			<div class="sub_block_form">
 				<h4>Subscribe for newsletter</h4>
@@ -29,166 +29,165 @@
 				
 			<p>Copyright ©2023 All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by <span>Colorlib</span></p>
 		</div>
+		
 	</nav>
 	<main>
 		<div class="post_block">
 			<img src="images/image_1.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>
-			
-			
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 			
 		<div class="post_block">
 			<img src="images/image_2.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="post_block">
 			<img src="images/image_3.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="post_block">
 			<img src="images/image_4.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="post_block">
 			<img src="images/image_5.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="post_block">
 			<img src="images/image_6.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="post_block">
 			<img src="images/image_7.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="post_block">
 			<img src="images/image_8.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="post_block">
 			<img src="images/image_9.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="post_block">
 			<img src="images/image_10.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="post_block">
 			<img src="images/image_11.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="post_block">
 			<img src="images/image_12.jpg" alt="">
 			<div class="text_block">
-				<h3><a href="#">A Loving Heart is the Truest Wisdom</a></h3>
+				<h3><a href="travel.html">A Loving Heart is the Truest Wisdom</a></h3>
 				<div class="post_block_text">	
 					<p><i class="fa-solid fa-calendar-days"></i>June 28, 2019</p>
-					<a href="#"><i class="fa-regular fa-folder"></i>Travel</a>
+					<a href="travel.html"><i class="fa-regular fa-folder"></i>Travel</a>
 					<p><i class="fa-solid fa-message"></i>5 Comment</p>
 				</div>
 				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-				<a href="#">Read More<i class="fa-solid fa-angle-right"></i></a>
-			</div>		
+				<a href="travel.html">Read More<i class="fa-solid fa-angle-right"></i></a>
+			</div>	
 		</div>
 		<div class="page_button">
 			<a href="#"><</a>
