--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/about.css">
+	
 	<title>Document</title>
 </head>
 <body>
@@ -31,7 +33,15 @@
 		
 	</nav>
 	<main>
-		<img src="images/image_4.jpg" alt="">
+		<div class="about">
+			<img src="images/image_4.jpg" alt="">
+			<div class="about_text">
+				<h2>I'm <span>Andrea Moore</span> a Scotish Blogger & Explorer</h2>
+				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>	
+			</div>
+			
+		</div>
+		
 	</main>
 </body>
 </html>
