--- a/travel.html
+++ b/travel.html
@@ -31,7 +31,29 @@
 		
 	</nav>
 	<main>
-		<img src="images/image_1.jpg" alt="">
+		<div class="travel_post">
+			<img src="images/image_1.jpg" alt="">
+			<h2>A Loving Heart is the Truest Wisdom</h2>
+			<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+			
+			<div class="post_author">
+				<img src="images/person_1.jpg" alt="">
+				<span>Written by </span><a href="#">Dave Lewis</a><p>, June 28, 2019</p>
+			</div>		
+			
+			
+			<div class="post_btn">
+				<a href="#">Continue Reading</a>
+			</div>
+			<div class="post_likes">
+				<i class="fa-solid fa-heart"></i>3
+				<i class="fa-regular fa-eye"></i>100
+				<i class="fa-solid fa-comment"></i>5
+
+			</div>
+		</div>
+		
+
 	</main>
 
 	<aside>
