--- a/contact.html
+++ b/contact.html
@@ -10,28 +10,64 @@
 </head>
 <body>
 	<nav>
-		<ul>
-			<li><a href="index.html" >Home</a></li>
-			<li><a href="fashion.html">Fashion</a></li>
-			<li><a href="travel.html">Travel</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="contact.html" class="active">Contact</a></li>
-		</ul>
-		<div class="sub_block">
-			<div class="logo">
-				<a href="index.html">Andrea Moore</a>
-			</div>
-			<div class="sub_block_form">
-				<h4>Subscribe for newsletter</h4>
-				<input type="text" name="email" placeholder="Enter Email Address"><i class="fa-solid fa-paper-plane"></i>
-			</div>
-				
-			<p>Copyright ©2023 All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by <span>Colorlib</span></p>
+		<div class="menu_block">
+			<ul>
+				<li><a href="index.html" >Home</a></li>
+				<li><a href="fashion.html">Fashion</a></li>
+				<li><a href="travel.html">Travel</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="contact.html" class="active">Contact</a></li>
+			</ul>
+			<div class="sub_block">
+				<div class="logo">
+					<a href="index.html">Andrea Moore</a>
+				</div>
+				<div class="sub_block_form">
+					<h4>Subscribe for newsletter</h4>
+					<input type="text" name="email" placeholder="Enter Email Address"><i class="fa-solid fa-paper-plane"></i>
+				</div>
+					
+				<p>Copyright ©2023 All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by <span>Colorlib</span></p>
+			</div>	
+		</div>
+		
+		<div class="bar_btn">
+			<i class="fa-solid fa-bars"></i>
+		</div>
+		<div class="close_btn">
+			<i class="fa-solid fa-xmark"></i>		
 		</div>
 	</nav>
 
 	<main>
-		форма
+		<div class="contact">
+			<h2>Contact Information</h2>
+			<div class="contact_address">
+				<div class="contact_block">
+					<p>Address: 198 West 21th Street, Suite 721 New York NY 10016</p>
+				</div>
+				<div class="contact_block">
+					<p>Phone: + 1235 2355 98</p>
+				</div>	
+				<div class="contact_block">
+					<p>Email: info@yoursite.com</p>
+				</div>
+				<div class="contact_block">
+					<p>Website yoursite.com</p>
+				</div>	
+			</div>
+			
+			<form>
+				<input type="text" placeholder="Your Name">
+				<input type="text" placeholder="Your Email">
+				<input type="text" placeholder="Subject">
+				<input type="text" placeholder="Message">
+				<a href="#">Send Message</a>
+			</form>
+		</div>
+		
 	</main>
+
+	<script src="js/menubtn.js"></script>
 </body>
 </html>
