--- a/index.html
+++ b/index.html
@@ -10,23 +10,31 @@
 </head>
 <body>
 	<nav>
-		<ul>
-			<li><a href="index.html" class="active">Home</a></li>
-			<li><a href="fashion.html">Fashion</a></li>
-			<li><a href="travel.html">Travel</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-		<div class="sub_block">
-			<div class="logo">
-				<a href="index.html">Andrea Moore</a>
-			</div>
-			<div class="sub_block_form">
-				<h4>Subscribe for newsletter</h4>
-				<input type="text" name="email" placeholder="Enter Email Address"><i class="fa-solid fa-paper-plane"></i>
-			</div>
-				
-			<p>Copyright ©2023 All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by <span>Colorlib</span></p>
+		<div class="menu_block">
+			<ul>
+				<li><a href="index.html" class="active">Home</a></li>
+				<li><a href="fashion.html">Fashion</a></li>
+				<li><a href="travel.html">Travel</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+			<div class="sub_block">
+				<div class="logo">
+					<a href="index.html">Andrea Moore</a>
+				</div>
+				<div class="sub_block_form">
+					<h4>Subscribe for newsletter</h4>
+					<input type="text" name="email" placeholder="Enter Email Address"><i class="fa-solid fa-paper-plane"></i>
+				</div>
+					
+				<p>Copyright ©2023 All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by <span>Colorlib</span></p>
+			</div>	
+		</div>
+		<div class="bar_btn">
+			<i class="fa-solid fa-bars"></i>
+		</div>
+		<div class="close_btn">
+			<i class="fa-solid fa-xmark"></i>		
 		</div>
 		
 	</nav>
@@ -284,5 +292,6 @@
 	</aside>
 
 
+	<script src="js/menubtn.js"></script>
 </body>
 </html>
